--- a/Quantumult.Tiktok.lnc.conf
+++ b/Quantumult.Tiktok.lnc.conf
@@ -13,8 +13,9 @@
 ​
 CN url 307 $1KR
 (?<=&mcc_mnc=)\d{5} url 307 $144028
-16.0.0 url 307 $113.2.2
-160010 url 307 $1132200
+(.*video_id=\w{32})(.*watermark=)(.*) url 307 $1
+(?<=\?version_code=)\d{2}.. url 307 $1白嫖
+
 ​
 [URL-REJECTION]
 FINAL,PROXY
