--- a/Shadowrocket.Tiktok.pte.ltd.conf
+++ b/Shadowrocket.Tiktok.pte.ltd.conf
@@ -1,9 +1,2 @@
-[URL Rewrite]
-(watermark=)1& $1& 302
-CN $1HR 302
-(mcc_mnc=)\d{5} $1& 302
-16.0.0 $18.2.2 302
-160014 $182201 302
-[MITM]
-hostname = *.tiktokv.com
-enable = false
+(.*video_id=\w{32})(.*watermark=)(.*) url 307 $1
+(?<=\?version_code=)\d{2}.. url 307 $1白嫖
