--- a/TikTok.Pte.Ltd1.conf
+++ b/TikTok.Pte.Ltd1.conf
@@ -1,6 +1,6 @@
 hostname = api.abema.io,*.tiktokv.com
 
-CN url 307 JP 
+(?<=_region=)CN(?=&) url 307 JP 
 # Redirect Google Search Service
 ^(http|https):\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 # Redirect HTTP to HTTPS
@@ -43,7 +43,7 @@ CN url 307 JP
 ^(http|https):\/\/(www.)?mathtype\.cn\/ url 302 https://www.dessci.com/
 ^(http|https):\/\/(www.)?mindmanager\.(cc|cn)\/ url 302 https://www.mindjet.com/cn/
 ^(http|https):\/\/(www.)?mindmapper\.cc\/ url 302 https://www.mindmapper.com/
-\d{2}\.\d\.\d url 307 8.2.0
+(?<=(&version_code|&app_version)=)\d{2}\.\d\.\d url 307 8.2.0
 ^(http|https):\/\/(www.)?(mycleanmymac|xitongqingli)\.com\/ url 302 https://macpaw.com/
 ^(http|https):\/\/(www.)?nicelabel\.cc\/ url 302 https://www.nicelabel.com/zh/
 ^(http|https):\/\/(www.)?ntfsformac\.cc\/ url 302 https://www.tuxera.com/products/tuxera-ntfs-for-mac-cn/
