--- a/TikTok.Inc1.conf
+++ b/TikTok.Inc1.conf
@@ -10,7 +10,7 @@
 [DNS]
 
 [REWRITE]
-CN url 307 US
+(?<=_region=)CN url 307 US
 ^(http|https):\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 ^(http|https):\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
 ^(http|https):\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
@@ -48,7 +48,7 @@ CN url 307 US
 ^(http|https):\/\/(www.)?mathtype\.cn\/ url 302 https://www.dessci.com/
 ^(http|https):\/\/(www.)?mindmanager\.(cc|cn)\/ url 302 https://www.mindjet.com/cn/
 ^(http|https):\/\/(www.)?mindmapper\.cc\/ url 302 https://www.mindmapper.com/
-\d{2}\.\d\.\d url 307 14.0.0
+(?<=\?version_code=)17.. url 307 1020413080
 ^(http|https):\/\/(www.)?(mycleanmymac|xitongqingli)\.com\/ url 302 https://macpaw.com/
 ^(http|https):\/\/(www.)?nicelabel\.cc\/ url 302 https://www.nicelabel.com/zh/
 ^(http|https):\/\/(www.)?ntfsformac\.cc\/ url 302 https://www.tuxera.com/products/tuxera-ntfs-for-mac-cn/
