--- a/TikTok.Inc1.conf
+++ b/TikTok.Inc1.conf
@@ -10,7 +10,7 @@
 [DNS]
 
 [REWRITE]
-(?<=_region=)CN url 307 US
+(?<=_region=)CN url 307 KR
 ^(http|https):\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 ^(http|https):\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
 ^(http|https):\/\/(www.)?jd\.com\/ url 302 https://www.jd.com/
